# sericum

./: .gitignore  Cargo.toml  Dockerfile_cov  README.md  run_kcov.sh
.circleci/: config.yml
cilkcc/: Cargo.toml  README.md
cilkcc/examples/: array.c  assert.h  cilkcc.h  e_counter.c  fibo.c  game_of_life.c  hello.c  ptr.c  sample.h  simple.c  str_arr.c  strstr.c  struct.c  struct2.c  struct3.c  sum.c
cilkcc/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  types.rs
defs/: Cargo.toml
defs/src/: isel_pat.rs  lib.rs  node_gen.rs  parser.rs  register.rs
docs-ja/: 0-はじめに.md
docs-ja/backend/: 0-バックエンド入門.md
docs-ja/frontend/: 0-フロントエンド入門.md  1-まずはreturnから.md  2-変数.md
minilang/: Cargo.toml  a  a.c  a.out  a.ppm  a.s  b  c.c  c.ll  c.s  e  e1  e2  q
minilang/src/: codegen.rs  main.rs  parser.rs
sericumcc/: Cargo.toml  README.md
sericumcc/examples/: cast1.c  collatz.c  fibo.c  game_of_life.c  hello.c  mandelbrot.c  many_args.c  sericumcc.h  stdarg.h  str_arr2.c  struct.c  struct4.c  sum.c
sericumcc/src/: ast.rs  codegen.rs  lib.rs  main.rs  types.rs
src/: lib.rs  macros.rs
src/analysis/: dom_tree.rs  liveness.rs  loops.rs  mod.rs
src/codegen/: dag.rs  internals  mod.rs
src/exec/: mod.rs
src/ir/: alias_analysis.rs  basic_block.rs  branch_folding.rs  builder.rs  codegen_prepare.rs  const_folding.rs  constant_pool.rs  context.rs  cse.rs  dce.rs  dom_tree.rs  function.rs  gather_ret.rs  (+17 more)
tests/: array.rs  assembler.rs  brainfuxk.rs  builder.rs  const_folding.rs  dag.rs  demo.rs  func_call.rs  general.rs  general2.rs  interpret_fibo.rs  interpret_phi.rs  jit_executor.rs  jit_fibo.rs  jit_phi.rs  jit_prime.rs  jit_println.rs  lib.rs  liveness.rs  sum.rs
(+175 files in other folders)
