[package]
name = "cilk"
version = "0.2.1"
authors = ["uint256_t"]
edition = "2018"
license-file = "LICENSE"
description = "(Toy) Compiler Infrastructure inspired by LLVM"
readme = "README.md"
repository = "https://github.com/maekawatoshiki/cilk"

[dependencies]
rustc-hash = "1.1.0"
id-arena = "2.2.1"
dynasm = "0.3.2"
dynasmrt = "0.3.1"
lazy_static = "1.4.0"
defs = { path = "defs", version = "0.1.0" }
rand = "0.7.3"

[features]

x86_64 = []
riscv64 = []
aarch64 = []
