[package]
name = "defs"
version = "0.1.0"
authors = ["uint256_t"]
edition = "2018"
license = "MIT"
description = "Macros to define architecture-dependent information for cilk"
repository = "https://github.com/maekawatoshiki/cilk/defs"

[dependencies]
proc-quote = "0.3.0"
proc-macro-error = "1.0.0"
rand = "0.7.3"
syn = "1.0.32"

[lib]
proc-macro = true

